# New_York_City_Taxi_Fair_Prediction

./: .gitignore  README.md  pyproject.toml
reports/: Observations.txt  model_prediction_sheet.xlsx
src/: config.py  dataset.py  features.py
src/modeling/: predict.py  train.py
