[project]
name = "New-York-City-Taxi-Fair-Prediction"
version = "0.1.0"
description = "Predict fair price using given features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "pandas",
    "numpy",
    "joblib",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "opendatasets",
    "pathlib",
    "fastparquet",
    "xgboost",
    "graphviz"
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "nbformat",
    "ruff",
    "pytest",
    "black",
]
